Fix the border overlap

--- a/styles.css
+++ b/styles.css
@@ -247,8 +247,6 @@
     left: 15px;
     width: 100%;
     height: 100%;
-    border: 0px solid var(--highlight-color);
-    border-radius: 5px;
     z-index: -1;
     transition: all 0.3s ease;
   }
